instant mesasging baby!!!

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "dayjs": "^1.8.26",
+    "firebase": "^7.14.4",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.1",
     "rc-progress": "^2.5.2",
